--- a/Recommendation.Rmd
+++ b/Recommendation.Rmd
@@ -158,3 +158,5 @@ dim(recc_matrix)
 **Ваша очередь:**
 
 Постройте рекомендательную систему на основе схожести между пользователями, а не между фильмами (метод UBCF вместо IBCF).
+Вууухууууу, обновление
+j,yjdktybttyfudhiugbjfdug
